Update: Fixed some layout issues

--- a/demo.css
+++ b/demo.css
@@ -4,8 +4,13 @@ body {
 }
 
 .title {
+  position: absolute;
   font-size: 18pt;
   font-weight: bold;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 38px;
 }
 
 .caption {
@@ -36,3 +41,25 @@ body {
 .emphasis {
   color: #fff;
 }
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: #00a8ff;
+  color: #fff;
+  z-index: 1;
+}
+
+.content {
+  position: relative;
+  top: 50px;
+}
+
+/*td {*/
+/*  width: 100px;*/
+/*  font-size: 20px;*/
+/*  border: solid 1px #ccc;*/
+/*}*/
